--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\Brand\\Desktop\\brandonpxw.github.io\\portfolio\\theme\\index.html"
+            "file": "c:\\Users\\Brand\\Desktop\\brandonpxw.github.io\\index.html"
         }
     ]
 }
