--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
 
         {
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\Brand\\Desktop\\brandonpxw.github.io\\index.html"
+            // "file": "c:\\Users\\Brand\\Desktop\\brandonpxw.github.io\\index.html"
+            "file": "C:\\Users\\Brand\\OneDrive\\Documents\\GitHub\\brandonpxw.github.io\\index.html"
+
         }
     ]
 }
