--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "request": "launch",
             "name": "Open index.html",
             // "file": "c:\\Users\\Brand\\Desktop\\brandonpxw.github.io\\index.html"
-            "file": "C:\\Users\\Brand\\OneDrive\\Documents\\GitHub\\brandonpxw.github.io\\index.html"
+            "file": "C:\\Users\\Brand\\Desktop\\brandonpxw.github.io\\index.html"
 
         }
     ]
